--- a/css/style.scss
+++ b/css/style.scss
@@ -4,63 +4,112 @@
     box-sizing: border-box;
 }
 html, body {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-family: Hind,sans-serif;
+    color: #212529;
+    line-height: 1.5;
+    background-color: #fff;
     font-size: 1rem;
     font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
     text-align: left;
-    background-color: #fff;
 }
 ul {
     list-style: none;
 }
+
 .header {
     position: absolute;
+    top: 0;
     left: 50%;
+    z-index: 100;
     transform: translateX(-50%);
-    width: 100%;
-    margin: 0 auto;
-    z-index: 1;
-    a { 
-        i {
-            color: green;
-            font-size: 2.5rem;
+    .navbar { 
+        .navbar-brand { 
+            display: inline-block;
+            padding-top: 0.3125rem;
+            padding-bottom: 0.3125rem;
+            margin-right: 1rem;
+            font-size: 1.25rem;
+            i {
+                font-size: 45px;
+                width: 42.19px;
+                color: #35a22c;
+            }
+            span {
+                color: white;
+                font-size: 36px;
+            }
         }
-        span {
-            color: white;
-            font-size: 2rem;
-        }
-    }
-    ul {
-        li {
-            margin: 0 10px;
-            a {
-                color: rgba(255,255,255,.5);
-                display: block;
-                padding: 0.5rem!important;
+        .navbar-collapse {
+            ul {
+                .nav-item.active .nav-link {
+                    color: #35a22c;
+                }
+                .nav-item.active::after {
+                    width: 100%;
+                    opacity: 1;
+                }
+                .nav-item {
+                    margin: 0 10px;
+                    &::after {
+                        content: "";
+                        display: block;
+                        width: 0;
+                        height: 2px;
+                        background-color: #35a22c;
+                        transition: all 0.5s;
+                        opacity: 0;
+                    }
+                    &:hover::after {
+                        width: 100%;
+                        opacity: 1;
+                    }
+                    &:hover a{
+                        color: #35a22c;
+                    }
+                    a {
+                        color: white;
+                        display: block;
+                        // padding: 0.5rem!important;
+                        transition: all .5s;
+                    }
+                }
             }
         }
     }
 }
-.mycarousel {
-    // position: relative;
+.myCarousel {
+    position: relative;
+    .carousel-indicators li {
+        width: 13px;
+        height: 13px;
+        border-radius: 50%;
+        opacity: 0.5;
+    }
+    .carousel-indicators li:hover {
+        background-color: #35a22c;
+        opacity: 1;
+    }
+    .carousel-indicators li.active {
+        background-color: #35a22c;
+        opacity: 1;
+    }
     .carousel-inner {
-        background-size: cover;
-        background-position: center;
-        background-repeat: none;
-        height: 100vh;
-        &:first-child {
-            background-image: url(../images/finland.jpg);
-        }
-        &:nth-child(2) {
-            background-image: url(../images/mountains.jpg);
-        }
-        &:nth-child(3) {
-            background-image: url(../images/mountains-1.jpg);
-        }
         .carousel-item {
             height: 100vh;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            &::after {
+                content: "";
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-color: rgba(39,43,54,.5);
+                z-index: 1;
+            }
             .carousel-caption {
                 position: absolute;
                 top: 77%;
@@ -68,17 +117,298 @@ ul {
                 height: 100%;
                 width: 100%;
                 transform: translateY(-50%);
-                .img-thumb {
+                img {
                     width: 150px;
                     height: auto;
                     margin: 0 auto;
-                    img {
-                        border-radius: 50%;
+                    border-radius: 50%;
+                }
+                h5 {
+                    font-size: 56px;
+                    line-height: 65px;
+                }
+                p {
+                    font-size: 24px;
+                }
+            }
+            &:first-child {
+                background-image: url(../images/finland.jpg);
+                height: 100vh;;
+            }
+            &:nth-child(2) {
+                background-image: url(../images/mountains.jpg);
+                height: 100vh;
+            }
+            &:last-child {
+                background-image: url(../images/mountains-1.jpg);
+                height: 100vh;
+            }
+        }
+    }
+}
+.project {
+    &__title {
+        max-width: 750px;
+        margin: 0 auto;
+        h2 {
+            font-size: 36px;
+            line-height: 42px;
+            color: #1a1d2d;
+            font-weight: 600;
+        }
+        p {
+            color: #585858;
+            line-height: 24px;
+        }
+    }
+    &__content {
+        .nav-tabs {
+            border-bottom: none;
+            .nav-item {
+                transition: all .5s;
+                .nav-link {
+                    color: #585858;
+                    border: 1px solid #1a1d2d;
+                    margin: 0 5px;
+                    border-radius: 5px;
+                    &.active {
+                        border-color: transparent;
+                        color: white;
+                        background-color: #35a22c;
                     }
                 }
             }
         }
+        .col__item {
+            img {
+                border-top-left-radius: 1rem;
+                border-top-right-radius: 1rem;
+            }
+            margin-top: 30px;
+            border-radius: 1rem;
+            // overflow: hidden;
+            border: none;
+            box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.13);
+            cursor: pointer;
+            &:hover h3 {
+                    color: #35a22c;
+            }
+            &:hover div {
+                border-color: #35a22c;
+            }
+            div {
+                padding: 1.25rem;
+                border: 1px solid transparent;
+                border-bottom-left-radius: 1rem;
+                border-bottom-right-radius: 1rem;
+                transition: all .5s;
+                h3 {
+                    font-size: 1.25rem;
+                    transition: all .5s;
+                }
+                p {
+                    color: #585858;
+                    margin-bottom: 1rem;
+                }
+            }
+        }
     }
-    
-    
+}
+.feature {
+    background-image: url(../images/3.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 100px 0 120px;
+    position: relative;
+    .overlay {
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(7,10,12,0.72);
+    }
+    .container {
+        position:relative;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+    }
+    &__title {
+        max-width: 750px;
+        margin: 0 auto;
+        h2 {
+            font-size: 36px;
+            line-height: 42px;
+            font-weight: 600;
+            color: #fff;
+        }
+        p {
+            color: #fff;
+            line-height: 24px;
+        }
+    }
+    &__content {
+        .col__item {
+            &:hover {
+                border-color: white;
+                background-color: black;
+            }
+            padding: 40px 40px;
+            border-radius: 10px;
+            background-color: rgba(255,255,255,.1);
+            border: 1px solid rgba(255,255,255,0.1);
+            backdrop-filter: blur(3px);
+            transition: all .5s;
+            i {
+                font-size: 48px;
+                color: #35a22c;
+            }
+            h4 {
+                font-size: 20px;
+                color: #fff;
+                line-height: 30px;
+                padding-top: 25px;
+                font-weight: 800;
+            }
+            p {
+                padding-top: 15px;
+                font-size: 16px;
+                line-height: 24px;
+                color: #fff;
+            }
+        }
+    }
+}
+.award {
+    padding: 70px 0;
+    position: relative;
+    &::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 0.5;
+        background-position: bottom left;
+        background-size: 50% auto;
+        background-repeat: no-repeat;
+        background-image: url(../images/memphis_3.png);
+    }
+    &__content {
+        position: relative;
+        z-index: 1;
+        .col__item-5 {
+            padding: 45px;
+            border-radius: 10px;
+            backdrop-filter: blur(3px);
+            box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.3);
+            h2 {
+                font-size: 36px;
+                line-height: 42px;
+                color: #1a1d2d;
+                font-weight: 600;
+            }
+            p {
+                color: #585858;
+                line-height: 24px;
+            }
+        }
+        .col__item-7 {
+            padding: 45px 0;
+        }
+    }
+}
+.footer {
+    background-color: #222222;
+    .footer__top {
+        a {
+            color: #585858;
+            margin-right: 10px;
+            &:hover {
+                color: #35a22c;
+            }
+            &:hover i{
+                border-color: #35a22c;
+            }
+            i {
+                width: 42px;
+                height: 42px;
+                line-height: 42px;
+                border-radius: 50%;
+                border: 1px solid #454545;
+                transition: all .5s;
+            }
+        }
+    }
+    .footer__bottom {
+        p {
+            color: #aaa;
+            margin: 0;
+            border-top: 1px solid #454545;
+            padding-top: 30px;
+            margin-top: 30px;
+        }
+    }
+}
+// ===============================RESPONSIVE==================================
+@media screen and (max-width:991.98px) {
+    .header {
+        .navbar {
+            .navbar-toggler {
+                background-color: #35a22c;
+                span {
+                    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+                }
+            }  
+            .navbar-collapse {
+                padding: 0;
+                ul {
+                    background-color: #fff;
+                    .nav-item {
+                        margin: 0;
+                        padding: 0 10px;
+                        &.active::after {
+                            width: 0;
+                        }
+                        // &.active{
+                        //     background-color: #35a22c;
+                        // }
+                        // &.active .nav-link{
+                        //     color: #fff;
+                        // }
+                        .nav-link {
+                            color: #35a22c;
+                        }
+                        &:hover {
+                            background-color: #35a22c;
+                        }  
+                        &:hover::after {
+                            width: 0;
+                        }   
+                        &:hover .nav-link {
+                            color: #fff;
+                        }
+                    }
+                    
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width:767.98px) {
+    .carousel-caption {
+        h5 {
+            max-width: 540px;     
+            margin: 0 auto;  
+        }
+    }
 }
